--- a/home/templates/carousel.html
+++ b/home/templates/carousel.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -15,7 +16,7 @@
         <img src="{% static '' %}img/istockphoto-638385938-1024x1024.jpg" class="d-block w-100 h-100" alt="...">
         <div class="like"></div>
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
+          <h5>ADEYEMI</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
