--- a/home/templates/category.html
+++ b/home/templates/category.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title % } | Category{% endblock title %}
+
 {% block header %}    {% include 'header.html' %}   {% endblock header %}
 
 {% block carousel %}  {% include 'carousel.html' %} {% endblock carousel %}
