--- a/home/templates/checkout.html
+++ b/home/templates/checkout.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} | Checkout{% endblock title %}
+
 {% load humanize %}
 
 {% block header %}    {% include 'header.html' %}   {% endblock header %}
