--- a/home/templates/details.html
+++ b/home/templates/details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Details{% endblock title %}
+{% block title %} | {{details.title_r}}{% endblock title %}
 
 {% block header %}    {% include 'header.html' %}   {% endblock header %}
 
