--- a/home/templates/displaycart.html
+++ b/home/templates/displaycart.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %} | {{profile.first_name}}'s cart{% endblock title %}
+
 {% load humanize %}
 
 {% block header %}    {% include 'header.html' %}   {% endblock header %}
