--- a/home/templates/password.html
+++ b/home/templates/password.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Password{% endblock title %}
+{% block title %} | Password Change{% endblock title %}
 
 {% block header %}    {% include 'header.html' %}   {% endblock header %}
 
