--- a/home/templates/profile_update.html
+++ b/home/templates/profile_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | profile_update{% endblock title %}
+{% block title %} | {{profile.first_name}}'s Update{% endblock title %}
 
 {% block header %}    {% include 'header.html' %}   {% endblock header %}
 
